# backend/docs/swagger.json
@@ -1,11 +1,24 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "Testing Swagger APIs.",
+        "title": "Exam Data Collector API",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "version": "1.0"
     },
     "paths": {
         "/api/admins/create_admin": {
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Create a new admin in the system",
                 "consumes": [
                     "application/json"
@@ -40,6 +53,11 @@
         },
         "/api/admins/forgot_password": {
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Send mail to forgot password mail",
                 "consumes": [
                     "application/json"
@@ -98,8 +116,46 @@
                 }
             }
         },
+        "/api/admins/login": {
+            "post": {
+                "description": "Admin Login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admins"
+                ],
+                "parameters": [
+                    {
+                        "description": "Admin",
+                        "name": "admin",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/admins/update_password": {
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Admin Password Update",
                 "consumes": [
                     "application/json"
@@ -133,6 +189,11 @@
         },
         "/api/admins/{id}/get_admin": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Get admin detail",
                 "consumes": [
                     "application/json"
@@ -165,6 +226,11 @@
         },
         "/api/available_exams/create_available_exam": {
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Create a new available exam in the system",
                 "consumes": [
                     "application/json"
@@ -199,6 +265,11 @@
         },
         "/api/available_exams/get_all_available_exams": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Get a list of available exam",
                 "consumes": [
                     "application/json"
@@ -225,6 +296,11 @@
         },
         "/api/available_exams/{id}/delete_available_exam": {
             "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Delete a available exam",
                 "consumes": [
                     "application/json"
@@ -257,6 +333,11 @@
         },
         "/api/available_exams/{id}/get_available_exam": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Get available exam detail",
                 "consumes": [
                     "application/json"
@@ -323,6 +404,11 @@
         },
         "/api/customers/get_all_customers": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Get a list of users",
                 "consumes": [
                     "application/json"
@@ -349,6 +435,11 @@
         },
         "/api/customers/{id}/delete_customer": {
             "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Delete a user",
                 "consumes": [
                     "application/json"
@@ -381,6 +472,11 @@
         },
         "/api/customers/{id}/get_customer": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Get user detail",
                 "consumes": [
                     "application/json"
@@ -413,6 +509,11 @@
         },
         "/api/customers/{id}/update_customer": {
             "put": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "User update",
                 "consumes": [
                     "application/json"
@@ -453,6 +554,11 @@
         },
         "/api/exams/create_exams": {
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Create exams",
                 "consumes": [
                     "application/json"
@@ -479,6 +585,11 @@
         },
         "/api/exams/get_all_exams": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Get a list of exams",
                 "consumes": [
                     "application/json"
@@ -505,6 +616,11 @@
         },
         "/api/exams/{id}/get_exam": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Get exam detail",
                 "consumes": [
                     "application/json"
@@ -606,20 +722,17 @@
             "type": "object",
             "required": [
                 "email",
-                "name",
-                "password"
+                "password",
+                "user_name"
             ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "name": {
-                    "type": "string"
-                },
                 "password": {
                     "type": "string"
                 },
-                "token": {
+                "user_name": {
                     "type": "string"
                 }
             }
@@ -764,6 +877,33 @@
                 }
             }
         },
+        "models.LoginRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password",
+                "user_name"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "models.UpdateUserRequest": {
             "type": "object",
             "required": [
@@ -826,6 +966,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "JWT": {
+            "type": "apiKey",
+            "name": "token",
+            "in": "header"
         }
     }
 }
